@@ -60,6 +60,7 @@ version <next>:
 - Expanded styling support for 3GPP Timed Text Subtitles (movtext)
 - WebP parser
 - tmedian filter
+- maskedthreshold filter
 
 
 version 4.2:
